@@ -1,5 +1,5 @@
 #Build Number for ANT. Do not edit!
-#Sat Jan 01 22:17:31 CET 2011
-REVISION=22
-build.number=75
+#Fri Jan 07 17:35:52 CET 2011
+REVISION=23
+build.number=76
 VERSION=03a
